--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,13 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+    // view
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.3.0'
 
+    // db
+    runtime('org.mariadb.jdbc:mariadb-java-client:1.5.8')
 
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
