--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,8 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
 
+  data:
+    web:
+      pageable:
+        one-indexed-parameters: true
+
